--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
   "scripts": {
     "build": "npm run build:commonjs && npm run build:es",
     "build:commonjs": "NODE_ENV=cjs rollup -c -o lib/remux.js",
-    "build:es": "BABEL_ENV=es NODE_ENV=es rollup -c -o es/remux.js"
+    "build:es": "BABEL_ENV=es NODE_ENV=es rollup -c -o es/remux.js",
+    "clean": "rimraf lib dist es"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-rc.1",
     "@babel/preset-env": "^7.0.0-rc.1",
     "babel-eslint": "^8.2.6",
     "prettier": "^1.14.2",
+    "rimraf": "^2.6.2",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "4.0.0-beta.8"
   },
