--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "url": "github:brevityco/remux"
   },
   "bugs": "https://github.com/brevityco/remux/issues",
-  "files": ["lib", "es", "src"],
+  "files": [
+    "lib",
+    "es",
+    "src"
+  ],
   "keywords": [
     "remux",
     "redux",
@@ -23,25 +27,49 @@
   "module": "es/remux.js",
   "jsnext:main": "es/remux.js",
   "scripts": {
-    "build": "npm run build:commonjs && npm run build:es",
+    "build": "yarn build:commonjs && yarn build:es",
     "build:commonjs": "NODE_ENV=cjs rollup -c -o lib/remux.js",
     "build:es": "BABEL_ENV=es NODE_ENV=es rollup -c -o es/remux.js",
-    "clean": "rimraf lib dist es"
+    "clean": "rimraf lib dist es",
+    "format": "prettier --write \"{src,test}/**/*.js\"",
+    "format:check": "prettier --list-different \"{src,test}/**/*.js\"",
+    "lint": "eslint src test",
+    "prepare": "yarn clean && yarn format:check && yarn lint && npm test && yarn build",
+    "test": "jest",
+    "test:watch": "yarn test --watch",
+    "test:cov": "yarn test --coverage"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-rc.1",
     "@babel/preset-env": "^7.0.0-rc.1",
+    "add": "^2.0.6",
+    "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.4.2",
+    "eslint": "^5.3.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-config-prettier-standard": "^2.0.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "immer": ">=1.5.0",
+    "jest": "^23.5.0",
     "prettier": "^1.14.2",
+    "react": ">=16.0.0",
+    "react-redux": ">=5.0.0",
+    "redux": ">=4.0.0",
+    "redux-thunk": ">=2.3.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.64.1",
-    "rollup-plugin-babel": "4.0.0-beta.8"
+    "rollup-plugin-babel": "4.0.0-beta.8",
+    "yarn": "^1.9.4"
   },
-  "sideEffects": false,
-  "peerDependencies": {
-    "immer": ">=1.5.0",
-    "react-redux": ">=5.0.7",
-    "redux": ">=4.0.0",
-    "redux-thunk": ">=2.3.0"
-  }
+  "jest": {
+    "testRegex": "(/test/.*\\.spec.js)$"
+  },
+  "peerDependencies": {},
+  "sideEffects": false
 }
