--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "remux",
+  "name": "duxhund",
   "version": "0.0.1",
   "description": "A opinionated and simplified interface for Redux",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "github:brevityco/remux"
+    "url": "github:brevityco/duxhund"
   },
-  "bugs": "https://github.com/brevityco/remux/issues",
+  "bugs": "https://github.com/brevityco/duxhund/issues",
   "files": ["lib", "es", "src"],
   "keywords": [
-    "remux",
+    "duxhund",
     "redux",
     "reducer",
     "state",
@@ -19,39 +19,39 @@
     "data"
   ],
   "author": "Trevor Smith <trevorlynnsmith@gmail.com>",
-  "main": "src/index.js",
-  "module": "es/remux.js",
-  "jsnext:main": "es/remux.js",
+  "main": "lib/index.js",
+  "module": "es/duxhund.js",
+  "jsnext:main": "es/duxhund.js",
   "scripts": {
     "build": "yarn build:commonjs && yarn build:es",
-    "build:commonjs": "NODE_ENV=cjs rollup -c -o lib/remux.js",
-    "build:es": "BABEL_ENV=es NODE_ENV=es rollup -c -o es/remux.js",
+    "build:commonjs": "NODE_ENV=cjs rollup -c -o lib/duxhund.js",
+    "build:es": "BABEL_ENV=es NODE_ENV=es rollup -c -o es/duxhund.js",
     "clean": "rimraf lib dist es",
     "format": "prettier --write \"{src,test}/**/*.js\"",
     "format:check": "prettier --list-different \"{src,test}/**/*.js\"",
     "lint": "eslint src test",
-    "prepublishOnly": "yarn clean && yarn format:check && yarn lint && npm test && yarn build",
+    "prepublishOnly": "yarn clean && yarn format:check && yarn lint && yarn test && yarn build",
     "test": "jest",
     "test:watch": "yarn test --watch",
     "test:cov": "yarn test --coverage"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "add": "^2.0.6",
     "babel-core": "^7.0.0-0",
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
-    "eslint": "^5.3.0",
+    "eslint": "^5.5.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-config-prettier-standard": "^2.0.0",
-    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "immer": ">=1.5.0",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "immer": "^1.6.0",
     "jest": "^23.5.0",
     "prettier": "^1.14.2",
     "react": ">=16.0.0",
@@ -59,8 +59,8 @@
     "redux": ">=4.0.0",
     "redux-thunk": ">=2.3.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "4.0.0-beta.8",
+    "rollup": "^0.65.2",
+    "rollup-plugin-babel": "4.0.3",
     "yarn": "^1.9.4"
   },
   "jest": {
