--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "data"
   ],
   "author": "Trevor Smith <trevorlynnsmith@gmail.com>",
-  "main": "lib/index.js",
+  "main": "lib/duxhund.js",
   "module": "es/duxhund.js",
   "jsnext:main": "es/duxhund.js",
   "scripts": {
