No longer delete __esModule now that Babel has marked it as non-enumerable.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
   "arrowParens": "avoid",
   "jsxBracketSameLine": true,
-  "parser": "babylon",
+  "parser": "babel",
   "printWidth": 80,
   "proseWrap": "preserve",
   "requirePragma": false,
