--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "duxhund",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A opinionated and simplified interface for Redux",
   "license": "MIT",
   "repository": {
@@ -8,7 +8,11 @@
     "url": "github:brevityco/duxhund"
   },
   "bugs": "https://github.com/brevityco/duxhund/issues",
-  "files": ["lib", "es", "src"],
+  "files": [
+    "lib",
+    "es",
+    "src"
+  ],
   "keywords": [
     "duxhund",
     "redux",
